crates/pane-tui/src/ui/snapshots/pane__ui__tests_status_bar__status_bar_normal_mode.snap
---
source: crates/pane-tui/src/ui/tests_status_bar.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  zsh                                                                                                                +
 ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
